"UC5 ability to add multple contact to addessBook "